--- a/stats-glow-mind/src/app/components/main/main.component.html
+++ b/stats-glow-mind/src/app/components/main/main.component.html
@@ -26,7 +26,7 @@
                         </mat-card>
                     </mat-tab>
                     <mat-tab label="{{ 'MAIN.TEAMS' | translate }}"> 
-                        <mat-card class="card-option card-teams" routerLink="/teams">
+                        <mat-card class="card-option card-nba" routerLink="/teams">
                             <img mat-card-image class="option-icon" src="../assets/images/icons/basketball-court.png" alt="Data Basketball">
                             <mat-card-header>
                                 <mat-card-title>{{ 'MAIN.TEAMS' | translate }}</mat-card-title>
@@ -35,7 +35,7 @@
                         </mat-card>
                     </mat-tab>
                     <mat-tab label="{{ 'MAIN.ANALYSIS' | translate }}"> 
-                        <mat-card class="card-option card-analysis" routerLink="/analysis">
+                        <mat-card class="card-option card-nba" routerLink="/analysis">
                             <img mat-card-image class="option-icon" src="../assets/images/icons/charts.png" alt="Stats">
                             <mat-card-header>
                                 <mat-card-title >{{ 'MAIN.ANALYSIS' | translate }}</mat-card-title>
@@ -44,7 +44,7 @@
                         </mat-card>
                     </mat-tab>
                     <mat-tab label="{{ 'MAIN.PREDICTIONS' | translate }}"> 
-                        <mat-card class="card-option card-predict" routerLink="/predict">
+                        <mat-card class="card-option card-nba" routerLink="/predict">
                             <img mat-card-image class="option-icon" src="../assets/images/icons/market-analysis.png" alt="Predicts">
                             <mat-card-header>
                                 <mat-card-title>{{ 'MAIN.PREDICTIONS' | translate }}</mat-card-title>
